--- a/src/components/pages/PageHeader.css
+++ b/src/components/pages/PageHeader.css
@@ -1,5 +1,5 @@
 .PageHeader {
-  background-color: #196619;
+  background-color: #0ac775;
   color: #fff;
   padding: 4px;
   text-align: center;
@@ -14,5 +14,5 @@
 }
 
 .PageHeader-actionMenu {
-  
+
 }
