--- a/src/components/pages/invoices/InvoiceSummary.css
+++ b/src/components/pages/invoices/InvoiceSummary.css
@@ -1,5 +1,5 @@
 .InvoiceSummary {
-  border-top: 1px solid #aaa;
+  border-top: 1px solid #f5f5f5;
   display: flex;
   justify-content: space-between;
 }
@@ -20,13 +20,11 @@
 
 .InvoiceSummary-issueDate {
   font-size: 11px;
-  font-style: italic;
   color: #676767;
   margin: 0px;
 }
 
 .InvoiceSummary-amount {
-  font-weight: bold;
   text-align: right;
   margin: 0px;
   position: relative;
